--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "am-appstore",
+  "name": "app-manager",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@electron/rebuild": "^4.0.1",
+    "@xterm/xterm": "^5.5.0",
     "node-pty": "^1.0.0",
     "svgo": "^4.0.0",
-    "undici": "^5.29.0"
+    "undici": "^5.29.0",
+    "xterm": "^5.3.0"
   },
   "engines": {
     "node": ">=20 <23"
